# graph_framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci_doxygen.yaml  ci_test.yaml
cmake/: FindNetCDF.cmake
graph_benchmark/: CMakeLists.txt  xrays_bench.cpp
graph_c_binding/: CMakeLists.txt  graph_c_binding.cpp  graph_c_binding.h
graph_docs/: code_performance.dox  code_structure.dox  compiling.dox  discription.dox  general.dox  kernel_optimization.dox  main.dox  tutorial.dox  use_cases.dox
graph_driver/: CMakeLists.txt  efit_example.sh  main.cpp  mpex_example.sh  xrays.cpp
graph_fortran_binding/: CMakeLists.txt  graph_fortran_binding.f90
graph_framework/: CMakeLists.txt  absorption.hpp  arithmetic.hpp  backend.hpp  backend_protocall.hpp  commandline_parser.hpp  coordinates.hpp  cpu_backend.hpp  cpu_context.hpp  cublic_splines.hpp  cuda_context.hpp  dispersion.hpp  equilibrium.hpp  graph_framework.hpp  hip_context.hpp  jit.hpp  logical.hpp  math.hpp  metal_context.hpp  newton.hpp  node.hpp  output.hpp  particle_in_cell.hpp  piecewise.hpp  random.hpp  register.hpp  solver.hpp  special_functions.hpp  timing.hpp  trigonometry.hpp  vector.hpp  workflow.hpp
graph_framework.xcodeproj/: project.pbxproj
graph_framework.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
graph_framework.xcodeproj/project.xcworkspace/xcuserdata/m4c.xcuserdatad/: UserInterfaceState.xcuserstate
graph_framework.xcodeproj/xcshareddata/xcdebugger/: Breakpoints_v2.xcbkptlist
graph_framework.xcodeproj/xcshareddata/xcschemes/: arithmetic_test.xcscheme  graph_driver.xcscheme  graph_pic.xcscheme  jit_test.xcscheme  math_test.xcscheme  physics_test.xcscheme  pic_test.xcscheme
graph_framework.xcodeproj/xcuserdata/m4c.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
graph_framework.xcodeproj/xcuserdata/m4c.xcuserdatad/xcschemes/: xcschememanagement.plist
graph_korc/: CMakeLists.txt  xkorc.cpp
graph_paper/: paper.bib  paper.md
graph_pic/: CMakeLists.txt  xpic.cpp
graph_playground/: CMakeLists.txt  xplayground.cpp
graph_tests/: CMakeLists.txt  arithmetic_test.cpp  backend_test.cpp  c_binding_test.c  dispersion_test.cpp  efit.nc  efit_gold.nc  efit_test.cpp  erfi_test.cpp  f_binding_test.f90  jit_test.cpp  logical_test.cpp  math_test.cpp  mpex.nc  no_derivative_test.cpp  node_test.cpp  physics_test.cpp  pic_test.cpp  piecewise_test.cpp  random_test.cpp  solver_test.cpp  test_erfi.nc  trigonometry_test.cpp  vector_test.cpp  vmec.nc  workflow_test.cpp
utilities/: BiCubicSplines.nb  Efit_gold_data.nb  VMECSplines.nb  bin.py  fix_NaN.py  get_includes.py
